--- a/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
+++ b/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
@@ -148,7 +148,7 @@
                                         </td>
                                         <td class="jtrp_col_issueSummary" style="#if( $isNotShowIssueSummary )display:none;#end">$wd.issueSummary</td>
                                         <td class="jtrp_col_type" style="#if( $isNotShowType )display:none;#end">
-                                          <img class="img-tooltip" src="#if( $wd.issueTypeIconUrl.startsWith("http") )$wd.issueTypeIconUrl#else$contextPath$wd.issueTypeIconUrl#end" alt="$wd.issueTypeName" title="$wd.issueTypeName"></img>
+                                          <img class="img-tooltip" src="#if(!$wd.issueAvatarId) #if( $wd.issueTypeIconUrl.startsWith("http") )$wd.issueTypeIconUrl#else$contextPath$wd.issueTypeIconUrl#end#else$contextPath/secure/viewavatar?size=xsmall&avatarId=$wd.issueAvatarId&avatarType=issuetype#end" alt="$wd.issueTypeName" title="$wd.issueTypeName"></img>
                                         </td>
                                         <td class="jtrp_col_status" style="#if( $isNotShowStatus )display:none;#end">
                                           #set($issueStatus = $constantsManager.getStatusByTranslatedName($wd.issueStatusName))
