--- a/src/main/resources/templates/reporting/reportingsettings.vm
+++ b/src/main/resources/templates/reporting/reportingsettings.vm
@@ -188,9 +188,9 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
 		            </tr>
 		            <tr class="buttons-container">
 						<td colspan="2">
-							<input id="savesettings"  type="submit" name="savesettings" value="$i18n.getText('plugin.save')" class="button"/>
-							<input id="resetButton"  type="button" name="reset" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerReportingSettingsWebAction!default.jspa'" class="button"/>
-							<input id="cancelButton"  type="button" name="cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetrackerWebAction!default.jspa'" class="button"/>
+							<input id="savesettings"  type="submit" name="savesettings" value="$i18n.getText('plugin.save')" class="aui-button"/>
+							<input id="resetButton"  type="button" name="reset" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerReportingSettingsWebAction!default.jspa'" class="aui-button"/>
+							<input id="cancelButton"  type="button" name="cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetrackerWebAction!default.jspa'" class="aui-button"/>
 						</td>
 					</tr>
 				</tbody>
