--- a/src/main/resources/templates/reporting/reportingusersettings.vm
+++ b/src/main/resources/templates/reporting/reportingusersettings.vm
@@ -36,81 +36,94 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
 	})(everit.jttp.reporting_admin, AJS.$);
 </script>
 
-<div id="plugin_head" class="item-header">
-		<div class="logo-img">
-			<a href="http://www.everit.biz/" target="_blank">
-				<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42">
-			</a>
-		</div>
-		<h1 class="item-summary">Timetracker Reporting Settings</h1>
-</div>
-<form name="userSettingForm"  method="post" action="JiraTimetrackerReportingUserSettingsWebAction.jspa"/>	
-  	<div id="main-content" class="content rounded" >
-		<div class="inside-content">
-		#if(!$message.isEmpty())
-			  	<div id="error_message">
-			 			$i18n.getText($message)
-			  	</div>
-		  	#end
-			<table  class="summaty-table">
-				<tbody>
-					<tr>
-		              <td style="text-align: right; vertical-align: top;" width="15%">
-		                <strong>$i18n.getText("jtrp.plugin.reporting.pagination")</strong>
-		              </td>
-		              <td class="admin-settings-value-column">
-		                <div>
-		                  <input type="hidden" id="pageSizeInput" name="pageSizeInput"/>
-		                  <a id="pageSizeButton" href="#pagesize-dropdown2-checkbox-radio-interactive-trigger" aria-owns="pagesize-dropdown2-checkbox-radio-interactive" aria-haspopup="true" class="aui-button aui-style-default aui-dropdown2-trigger">
-                    		Dropdown trigger
+<section id="content" role="main">
+        <header class="aui-page-header">
+            <div class="aui-page-header-inner">
+                <div class="aui-page-header-image">
+                    <span class="aui-avatar aui-avatar-large">
+                        <span class="aui-avatar-inner">
+                          <a href="http://www.everit.biz/index.php?nyelv=en" target="_blank">
+                            <img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:reporting-resources/E_logo.png" alt="Everit reporting logo">
                           </a>
-			                <!-- Dropdown -->
-			                <div id="pagesize-dropdown2-checkbox-radio-interactive" class="aui-dropdown2 aui-style-default">
-								   <div class="aui-dropdown2-section">
-									  <ul>
-			                            <li><a id="pages_5" class="aui-dropdown2-radio interactive">5</a></li>
-			                            <li><a id="pages_10" class="aui-dropdown2-radio interactive">10</a></li>
-			                            <li><a id="pages_15" class="aui-dropdown2-radio interactive">15</a></li>
-			                            <li><a id="pages_20" class="aui-dropdown2-radio interactive">20</a></li>
-			                            <li><a id="pages_25" class="aui-dropdown2-radio interactive">25</a></li>
-			                            <li><a id="pages_30" class="aui-dropdown2-radio interactive">30</a></li>
-			                            <li><a id="pages_35" class="aui-dropdown2-radio interactive">35</a></li>
-			                            <li><a id="pages_40" class="aui-dropdown2-radio interactive">40</a></li>
-			                        </ul>
-			                      </div>
-			                </div>
-		                </div>
-		                <div class="description">
-		                  $i18n.getText("jtrp.plugin.reporting.pagination.desc")
-		                </div>
-		              </td>
-		            </tr>
-		            <tr>
-		              <td style="text-align: right; vertical-align: top;" width="15%">
-		                <strong>$i18n.getText("jtrp.plugin.reporting.popup.check")</strong>
-		              </td>
-		              <td class="admin-settings-value-column">
-		                <div>
-		                  <input id="user_popup" type="checkbox" value="user_popup" name="user_popup" #if(!$userPopupVisible) checked #end /> 
-		                </div>
-		                <div class="description">
-		                  $i18n.getText("jtrp.plugin.reporting.popup.check.desc")
-		                </div>
-		              </td>
-		            </tr>
-		            <tr class="buttons-container">
-						<td colspan="2">
-							<input id="savesettings"  type="submit" name="savesettings" value="$i18n.getText('plugin.save')" class="aui-button"/>
-							<input id="resetButton"  type="button" name="reset" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerReportingUserSettingsWebAction!default.jspa'" class="aui-button"/>
-							<input id="cancelButton"  type="button" name="cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='ReportingWebAction!default.jspa'" class="aui-button"/>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			
+                        </span>
+                    </span>
+                </div>
+                <div class="aui-page-header-main">
+                    <h1>Reporting Settings</h1>
+                </div>                
+            </div>
+        </header>
+        <div class="aui-page-panel">
+			<div class="aui-page-panel-inner">
+				<section class="aui-page-panel-content">
+				<form name="userSettingForm"  method="post" action="JiraTimetrackerReportingUserSettingsWebAction.jspa"/>	
+				  	<div id="main-content" >
+						#if(!$message.isEmpty())
+							  	<div id="error_message">
+							 			$i18n.getText($message)
+							  	</div>
+						  	#end
+							<table>
+								<tbody>
+									<tr>
+						              <td style="text-align: right; vertical-align: top;" width="15%">
+						                <strong>$i18n.getText("jtrp.plugin.reporting.pagination")</strong>
+						              </td>
+						              <td class="admin-settings-value-column">
+						                <div>
+						                  <input type="hidden" id="pageSizeInput" name="pageSizeInput"/>
+						                  <a id="pageSizeButton" href="#pagesize-dropdown2-checkbox-radio-interactive-trigger" aria-owns="pagesize-dropdown2-checkbox-radio-interactive" aria-haspopup="true" class="aui-button aui-style-default aui-dropdown2-trigger">
+				                    		Dropdown trigger
+				                          </a>
+							                <!-- Dropdown -->
+							                <div id="pagesize-dropdown2-checkbox-radio-interactive" class="aui-dropdown2 aui-style-default">
+												   <div class="aui-dropdown2-section">
+													  <ul>
+							                            <li><a id="pages_5" class="aui-dropdown2-radio interactive">5</a></li>
+							                            <li><a id="pages_10" class="aui-dropdown2-radio interactive">10</a></li>
+							                            <li><a id="pages_15" class="aui-dropdown2-radio interactive">15</a></li>
+							                            <li><a id="pages_20" class="aui-dropdown2-radio interactive">20</a></li>
+							                            <li><a id="pages_25" class="aui-dropdown2-radio interactive">25</a></li>
+							                            <li><a id="pages_30" class="aui-dropdown2-radio interactive">30</a></li>
+							                            <li><a id="pages_35" class="aui-dropdown2-radio interactive">35</a></li>
+							                            <li><a id="pages_40" class="aui-dropdown2-radio interactive">40</a></li>
+							                        </ul>
+							                      </div>
+							                </div>
+						                </div>
+						                <div class="description">
+						                  $i18n.getText("jtrp.plugin.reporting.pagination.desc")
+						                </div>
+						              </td>
+						            </tr>
+						            <tr>
+						              <td style="text-align: right; vertical-align: top;" width="15%">
+						                <strong>$i18n.getText("jtrp.plugin.reporting.popup.check")</strong>
+						              </td>
+						              <td class="admin-settings-value-column">
+						                <div>
+						                  <input id="user_popup" type="checkbox" value="user_popup" name="user_popup" #if(!$userPopupVisible) checked #end /> 
+						                </div>
+						                <div class="description">
+						                  $i18n.getText("jtrp.plugin.reporting.popup.check.desc")
+						                </div>
+						              </td>
+						            </tr>
+						            <tr class="buttons-container">
+										<td colspan="2">
+											<input id="savesettings"  type="submit" name="savesettings" value="$i18n.getText('plugin.save')" class="aui-button"/>
+											<input id="resetButton"  type="button" name="reset" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerReportingUserSettingsWebAction!default.jspa'" class="aui-button"/>
+											<input id="cancelButton"  type="button" name="cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='ReportingWebAction!default.jspa'" class="aui-button"/>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+					</div>
+				</form>
+			</section>              
 		</div>
-	</div>
-</form>
+	</div>          
+</section>
 <!-- Issue Collector script -->
 <script type="text/javascript" src="$issueCollectorSrc"></script>
 </body>
