Added empty result info message to reporting page.

--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -42,6 +42,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
             useISO8601: ${useISO8601},
             isShowTutorial: ${isShowTutorialDialog},
             hasBrowseUsersPermission: ${hasBrowseUsersPermission},
+            worklogDetailsEmpty: ${worklogDetailsEmpty},
             dateToFormated: ${filterCondition.worklogEndDate},
             dateFromFormated: ${filterCondition.worklogStartDate},
             dateCreatedFormated: +"${filterCondition.issueCreateDate}",
